@@ -12,11 +12,11 @@ include "blankdb_oo.inc";
 $db->query("CREATE TABLE foo(c1 date, c2 time, c3 varchar(64))");
 $db->query("INSERT INTO foo VALUES ('2002-01-02', '12:49:00', NULL)");
 $r = $db->query("SELECT * from foo");
-var_dump($r->fetch_array(SQLITE_BOTH));
+var_dump($r->fetch(SQLITE_BOTH));
 $r = $db->query("SELECT * from foo");
-var_dump($r->fetch_array(SQLITE_NUM));
+var_dump($r->fetch(SQLITE_NUM));
 $r = $db->query("SELECT * from foo");
-var_dump($r->fetch_array(SQLITE_ASSOC));
+var_dump($r->fetch(SQLITE_ASSOC));
 ?>
 --EXPECT--
 array(6) {
