@@ -1,6 +1,7 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ????? 2004, PHP 5 Release Candidate 2
+- Changed sqlite's OO API to studlyCaps. (Marcus)
 - Fixed bug #27628 (Simplify the process of making a POST request via stream
   context). (Ilia)
 - Fixed bug #27469 (serialize() objects of incomplete class). (Dmitry)
